cmake_minimum_required(VERSION 2.8)
project( gazeTracker )
find_package( OpenCV REQUIRED )
add_executable( gazeTracker gazeTracker.cpp )
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries( gazeTracker ${OpenCV_LIBS} Threads::Threads)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++11")